some scratches + docs

--- a/kernel/bootstrap/Makefile
+++ b/kernel/bootstrap/Makefile
@@ -5,7 +5,7 @@ BOOTSTRAP_OBJECT = bootstrap_high.o
 BOOTSTRAP_SRC = bootstrap.cpp
 
 $(BOOTSTRAP_OBJECT): $(BOOTSTRAP_SRC)
-	i686-elf-g++ -c $(BOOTSTRAP_SRC) -o $(BOOTSTRAP_OBJECT) -ffreestanding -Wall -Wextra -fno-exceptions -fno-rtti -masm=intel
+	i686-elf-g++ -I../ -c $(BOOTSTRAP_SRC) -o $(BOOTSTRAP_OBJECT) -ffreestanding -Wall -Wextra -fno-exceptions -fno-rtti -masm=intel
 
 $(BOOTSTRAP_BINARY): $(BOOTSTRAP_OBJECT) bootstrap_low.o bootstrap.ld
 	i686-elf-g++ -T bootstrap.ld -o $(BOOTSTRAP_BINARY) -ffreestanding -nostdlib $(BOOTSTRAP_OBJECT) bootstrap_low.o -lgcc
