makefiles p2, getting rid of fPIC and moving kernel to fixed offset

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -1,8 +1,10 @@
+# USEFUL VARS DEFINITIONS ==============================================================
 ROOT_DIR := $(dir $(abspath $(lastword $(MAKEFILE_LIST))))
 BIN_DIR := $(ROOT_DIR)/bin
 BIN_LIB_DIR := $(ROOT_DIR)/bin/lib
 BUILD_DIR := ./build
 
+H_FILES := $(wildcard *.h)
 SRC_FILES := $(wildcard *.cpp) $(wildcard *.s)
 OBJ_FILES := $(SRC_FILES:.cpp=.o)
 OBJ_FILES := $(OBJ_FILES:.s=.o)
@@ -11,12 +13,42 @@ OBJ_FILES := $(addprefix $(BUILD_DIR)/,$(OBJ_FILES))
 GCC := i686-elf-g++
 INCLUDE_DIR := $(ROOT_DIR)/kernel
 GCCFLAGS := -fPIC -ffreestanding -Wall -Wextra -fno-exceptions -fno-rtti -masm=intel -m32
+#GCCFLAGS := -ffreestanding -Wall -Wextra -fno-exceptions -fno-rtti -masm=intel -m32
 LDFLAGS := -fPIC -ffreestanding -nostdlib -m32
-LIBS := -lgcc
+#LDFLAGS := -ffreestanding -nostdlib -m32
+LIBS := -L$(BIN_LIB_DIR) -lgcc
 
 ASM := nasm
 ASMFLAGS += -Wall -O0
 ASM_CLEAN_TYPICAL := rm -f *.o; rm -f *.bin; rm -f *.bin.lst; rm -rf $(BUILD_DIR)
+
+AR := i686-elf-ar
+
+
+
+# TARGETS PER TYPE ==============================================================
+
+ifneq ($(TARGETLIB_NAME),)
+TARGETLIB_SUFFIX := .a
+TARGETLIB_PREFIX := lib
+TARGETLIB = $(BIN_LIB_DIR)/$(TARGETLIB_PREFIX)$(TARGETLIB_NAME)$(TARGETLIB_SUFFIX)
+
+build: $(TARGETLIB)
+
+$(TARGETLIB): $(OBJ_FILES)
+	mkdir -p $(BIN_LIB_DIR)
+	$(AR) rcs $(TARGETLIB) $<
+
+clean-output:
+	rm -f $(TARGETLIB)
+else
+clean-output:
+endif
+
+
+
+
+# GENERAL TARGETS ==============================================================
 
 $(BUILD_DIR)/%.o: %.cpp
 	mkdir -p $(BUILD_DIR)
@@ -28,5 +60,12 @@ $(BUILD_DIR)/%.o: %.s
 
 %.bin: %.asm
 	$(ASM) $(ASMFLAGS) $< -o $(<:.asm=.bin) -l $(<:.asm=.bin.lst)
+
+vdisk: build
+
+clean-builds:
+	rm -rf $(BUILD_DIR);
+
+clean: clean-builds clean-output
 
 VIRTUAL_DISK = disk.img
