--- a/Makefile.inc
+++ b/Makefile.inc
@@ -12,10 +12,10 @@ OBJ_FILES := $(addprefix $(BUILD_DIR)/,$(OBJ_FILES))
 
 GCC := i686-elf-g++
 INCLUDE_DIR := $(ROOT_DIR)/kernel
-GCCFLAGS := -fPIC -ffreestanding -Wall -Wextra -fno-exceptions -fno-rtti -masm=intel -m32
-#GCCFLAGS := -ffreestanding -Wall -Wextra -fno-exceptions -fno-rtti -masm=intel -m32
-LDFLAGS := -fPIC -ffreestanding -nostdlib -m32
-#LDFLAGS := -ffreestanding -nostdlib -m32
+#GCCFLAGS := -fPIC -ffreestanding -Wall -Wextra -fno-exceptions -fno-rtti -masm=intel -m32
+GCCFLAGS := -ffreestanding -Wall -Wextra -fno-exceptions -fno-rtti -masm=intel -m32
+#LDFLAGS := -fPIC -ffreestanding -nostdlib -m32
+LDFLAGS := -ffreestanding -nostdlib -m32
 LIBS := -L$(BIN_LIB_DIR) -lgcc
 
 ASM := nasm
