shell bare bones + libc/libk

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,6 +1,7 @@
 # the order is important!
 .PHONY: build clean vdisk
 build clean vdisk:
+	$(MAKE) -C libk $@
 	$(MAKE) -C io $@
 	$(MAKE) -C thirdparty/fatfs $@
 	$(MAKE) -C main $@
