--- a/Makefile.inc
+++ b/Makefile.inc
@@ -16,7 +16,6 @@ GCC := i686-elf-gcc
 GCCFLAGS := -ffreestanding -Wall -Wextra -masm=intel -m32 -g
 GXX := i686-elf-g++
 GXXFLAGS := $(GCCFLAGS) -fno-rtti -fno-exceptions -fno-threadsafe-statics -m32 -g
-INCLUDE_DIR := $(ROOT_DIR)/kernel
 LDFLAGS := -ffreestanding -nostdlib -m32
 LIBS := -L$(BIN_LIB_DIR) -lgcc
 
@@ -52,14 +51,14 @@ endif
 
 
 # GENERAL TARGETS ==============================================================
-COMPILE_CPP = $(GXX) -I $(INCLUDE_DIR) -c $< -o $(BUILD_DIR)/$(<:.cpp=.o) $(GXXFLAGS)
+COMPILE_CPP = $(GXX) $(INCLUDE_DIR) -c $< -o $(BUILD_DIR)/$(<:.cpp=.o) $(GXXFLAGS)
 $(BUILD_DIR)/%.o: %.cpp
 	mkdir -p $(BUILD_DIR)
 	$(COMPILE_CPP)
 
 $(BUILD_DIR)/%.o: %.c
 	mkdir -p $(BUILD_DIR)
-	$(GCC) -I $(INCLUDE_DIR) -c $< -o $(BUILD_DIR)/$(<:.c=.o) $(GCCFLAGS)
+	$(GCC) $(INCLUDE_DIR) -c $< -o $(BUILD_DIR)/$(<:.c=.o) $(GCCFLAGS)
 
 $(BUILD_DIR)/%.o: %.s
 	mkdir -p $(BUILD_DIR)
