--- a/kernel/MakefileKern.inc
+++ b/kernel/MakefileKern.inc
@@ -1,7 +1,7 @@
 KERN_DIR := $(dir $(abspath $(lastword $(MAKEFILE_LIST))))
 include $(KERN_DIR)/../Makefile.inc
 
-GCCFLAGS := $(GCCFLAGS) -DWELES_KERNEL
-GXXFLAGS := $(GXXFLAGS) -DWELES_KERNEL
+GCCFLAGS := $(GCCFLAGS) -DWELES_KERNEL -DPRINTF_DISABLE_SUPPORT_LONG_LONG
+GXXFLAGS := $(GXXFLAGS) -DWELES_KERNEL -DPRINTF_DISABLE_SUPPORT_LONG_LONG
 
 INCLUDE_DIR := -I $(ROOT_DIR)/kernel -I $(ROOT_DIR)/kernel/libk/include
