--- a/user/Makefile
+++ b/user/Makefile
@@ -6,6 +6,8 @@ clean: clean-builds clean-output
 	$(MAKE) -C pwd $@
 	$(MAKE) -C ls $@
 	$(MAKE) -C cd $@
+	$(MAKE) -C cat $@
+	$(MAKE) -C rm $@
 
 build: $(BUILD_DIR)/crt0.o
 	$(MAKE) -C echo $@
@@ -13,6 +15,8 @@ build: $(BUILD_DIR)/crt0.o
 	$(MAKE) -C pwd $@
 	$(MAKE) -C ls $@
 	$(MAKE) -C cd $@
+	$(MAKE) -C cat $@
+	$(MAKE) -C rm $@
 
 vdisk: build
 	$(ROOT_DIR)/util/mount.sh $(DISK_IMAGE)
